--- a/movie/templates/movie/movie_detail.html
+++ b/movie/templates/movie/movie_detail.html
@@ -109,8 +109,8 @@
                             {% endfor %}
 
                         </p>
-                        <p class="editContent" style="outline: none; cursor: inherit;">
-                        {{ movie.description }}</p>
+                        <p class="editContent">
+                        {{ movie.description|safe }}</p>
                         <p class="mt-3 italic-blue editContent"
                            style="outline: none; cursor: inherit;">
                         </p>
