--- a/movie/templates/include/sidebar.html
+++ b/movie/templates/include/sidebar.html
@@ -1,4 +1,4 @@
-
+{% load movie_tags %}
 
     <div class="search-bar w3layouts-newsletter">
         <h3 class="sear-head editContent" >Поиск фильма</h3>
@@ -117,3 +117,4 @@
             </li>
         </ul>
     </div>
+{% get_last_movies count=2 %}
