--- a/movie/templates/include/sidebar.html
+++ b/movie/templates/include/sidebar.html
@@ -7,61 +7,33 @@
             <button class="btn1 btn" ><span class="fa fa-search" aria-hidden="true" ></span></button>
         </form>
     </div>
-    <!--preference -->
+<form action="{% url 'filter' %}" method="get">
     <div class="left-side my-4">
         <h3 class="sear-head editContent" >Жанры</h3>
         <ul class="w3layouts-box-list">
+          {% for genre in view.get_genres %}
             <li class="editContent" >
-                <input type="checkbox" class="checked">
-                <span class="span editContent" >Аниме</span>
-            </li>
-                <li class="editContent" >
-                <input type="checkbox" class="checked">
-                <span class="span editContent" >Боевики</span>
-            </li>
-            <li class="editContent" >
-                <input type="checkbox" class="checked">
-                <span class="span editContent" >Комедии</span>
-            </li>
-            <li class="editContent" >
-                <input type="checkbox" class="checked">
-                <span class="span editContent" >Ужасы</span>
-            </li>
+                <input type="checkbox" class="checked" name="genre", value="{{ genre.id }}">
+                <span class="span editContent" >{{ genre.name }}</span>
+            {% endfor %}
         </ul>
     </div>
-    <!-- // preference -->
-    <!-- discounts -->
+
+
     <div class="left-side">
         <h3 class="sear-head editContent" >Год</h3>
         <ul class="w3layouts-box-list">
+        {% for movie in view.get_year %}
             <li class="editContent" >
-                <input type="checkbox" class="checked">
-                <span class="span editContent" >2020</span>
+                <input type="checkbox" class="checked" name="year", value="{{ movie.year }}">
+                <span class="span editContent" >{{ movie.year }}</span>
             </li>
-            <li class="editContent" >
-                <input type="checkbox" class="checked">
-                <span class="span editContent" >2019</span>
-            </li>
-            <li class="editContent" >
-                <input type="checkbox" class="checked">
-                <span class="span editContent" >2018</span>
-            </li>
-            <li>
-                <input type="checkbox" class="checked">
-                <span class="span editContent" >2017</span>
-            </li>
-            <li class="editContent" >
-                <input type="checkbox" class="checked">
-                <span class="span editContent" >2016</span>
-            </li>
-            <li class="editContent" >
-                <input type="checkbox" class="checked">
-                <span class="span editContent" >2015</span>
-            </li>
+            {% endfor %}
         </ul>
     </div>
-    <!-- //discounts -->
-    <!-- reviews -->
+    <<button type="submit">Найти</button>
+</form>
+
     <div class="customer-rev left-side my-4">
         <h3 class="sear-head editContent" >Рейтинг</h3>
         <ul class="w3layouts-box-list">
